# ainput

./: .gitignore  README.md  package-lock.json  package.json
docs/: directory_structure.md  implementation_checklist.md
src/: App.tsx  Settings.tsx  index.css  main.tsx
src-tauri/: .tauriignore  Cargo.toml  config.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: ai_client.rs  mod.rs  privacy.rs
src-tauri/src/config/: ai_client.rs  keybinding.rs  keyboard.rs  mod.rs  overlay.rs  privacy.rs  system.rs  ui_automation.rs
src-tauri/src/context/: mod.rs
src-tauri/src/context/app/: mod.rs
src-tauri/src/context/clipboard/: mod.rs
src-tauri/src/context/history/: db.rs  history.rs  mod.rs  search.rs
src-tauri/src/db/: ai_token_usage.rs  conn.rs  input_history.rs  mod.rs
src-tauri/src/input/: hook.rs  keyboard.rs  mod.rs
src-tauri/src/os/: mod.rs
src-tauri/src/os/clipboard/: mod.rs  windows_clipboard.rs
src-tauri/src/os/element/: app_element.rs  mod.rs  ui_automation.rs
src-tauri/src/os/monitor/: mod.rs
src-tauri/src/os/window/: mod.rs  windows_window.rs
src-tauri/src/overlay/: overlay.rs
src-tauri/src/plugin/: mod.rs
src-tauri/src/utils/: logger.rs
