[package]
name = "ainput"
version = "0.1.0"
description = "An ai input assistant"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ainput_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.5.0", features = ["tray-icon", "devtools", "image-ico", "config-toml"] }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_UI_Input",
] }
tokio = { version = "1.44.2", features = ["time"] }
once_cell = "1.21.3"
lazy_static = "1.5.0"
thread_local = "1.1.8"
indexmap = { version = "2.9.0", features = ["serde"] }
log = "0.4"
toml = "0.8.10"
tauri-plugin-process = "2"
time = { version = "0.3", features = ["local-offset"] }
flexi_logger = "0.30.0"

[features]
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = "2"
tauri-plugin-single-instance = "2"
